# cog-replicate-logo-generator

./: .gitignore  README.md  cog.yaml  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
cog_replicate_logo_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_predict.py
